[gd_scene load_steps=20 format=3 uid="uid://chscaxj001hd1"]

[ext_resource type="Texture2D" uid="uid://da37ntccmwp46" path="res://Assets/Tiny Swords/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple.png" id="1_ahtqm"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_g06ui"]
[ext_resource type="PackedScene" uid="uid://c7jcv7h4mrslc" path="res://Scenes/skull.tscn" id="2_cvr5y"]
[ext_resource type="PackedScene" uid="uid://c8puewkiersyh" path="res://Scenes/ritual.tscn" id="3_qr4fl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nrenj"]
radius = 14.0
height = 28.0

[sub_resource type="Animation" id="Animation_bp3cy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_xive4"]
resource_name = "down_attack_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_0v6el"]
resource_name = "down_attack_2"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [29, 30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_jcn8n"]
resource_name = "horizontal_attack_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_lgxu3"]
resource_name = "horizontal_attack_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(5, 2), Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3)]
}

[sub_resource type="Animation" id="Animation_xketd"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_nl0t8"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_s5irr"]
resource_name = "up_attack_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_ey6e1"]
resource_name = "up_attack_2"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgcqb"]
_data = {
"RESET": SubResource("Animation_bp3cy"),
"down_attack_1": SubResource("Animation_xive4"),
"down_attack_2": SubResource("Animation_0v6el"),
"horizontal_attack_1": SubResource("Animation_jcn8n"),
"horizontal_attack_2": SubResource("Animation_lgxu3"),
"idle": SubResource("Animation_xketd"),
"run": SubResource("Animation_nl0t8"),
"up_attack_1": SubResource("Animation_s5irr"),
"up_attack_2": SubResource("Animation_ey6e1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_n7flx"]
radius = 136.781

[sub_resource type="CircleShape2D" id="CircleShape2D_0mxcx"]
radius = 41.0488

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfwql"]
bg_color = Color(0, 0, 0, 0.729412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glqqy"]
bg_color = Color(0.992157, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_g06ui")
death_prefabs = ExtResource("2_cvr5y")
sword_damage = 5
ritual_damage = 10
ritual_interval = 10.0
ritual_scene = ExtResource("3_qr4fl")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -31)
texture = ExtResource("1_ahtqm")
hframes = 6
vframes = 8
frame = 12

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-2, -7)
shape = SubResource("CapsuleShape2D_nrenj")
debug_color = Color(0, 0.646444, 0.244288, 0.156863)

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lgcqb")
}
autoplay = "idle"

[node name="Area_Sword" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="Area_Sword"]
position = Vector2(1, -28)
shape = SubResource("CircleShape2D_n7flx")
debug_color = Color(0.815686, 0.4, 0.207843, 0.25098)

[node name="HitboxArea" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(1, -30)
shape = SubResource("CircleShape2D_0mxcx")

[node name="Health_ProgressBar" type="ProgressBar" parent="."]
offset_left = -72.0
offset_right = 79.0
offset_bottom = 27.0
theme_override_styles/background = SubResource("StyleBoxFlat_hfwql")
theme_override_styles/fill = SubResource("StyleBoxFlat_glqqy")
show_percentage = false
